# electronix_id

./: .env.example  .gitignore  Bruno-Collection-Guide.md  CLAUDE.md  Cargo.toml  README.md  RESUME.md
.sqlx/: query-0109366488ea984a30a6faf89cacfba737205f9bf3312c4f7dc8e9596d4a9648.json  query-12103f252928c3e3d4fd86502330710e207bcd9ad6bfcda691b75d46de7b5305.json  query-251edd1021e6a31edc0780aef3a2c311616be48817760706512f7ab437255294.json  query-256a42b30aa2999064b587122e0179164c8eaae75eacc563c259905116990035.json  query-33b1acd1ccad0e0a9320373310013dccf34012ce3cc7290c4f9a163d4aa24d64.json  query-353fbf7b6711e795465e47ff5d217e9e3ac2524ab386b35e014adf7dcecc134b.json  query-38cb6b2410deef1931bcc53b313e1eb3ba6c9ff5153c53248310e6465dd0e695.json  query-43ce753bffa6ba89df4f98b82364df1e5f46f7b06dbc2b2c5baf05c2ea149581.json  query-44141eeb233c8c6fd762587360bd856e5d56dab31cafbb9f18ca14dca8f6784c.json  (+42 more)
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/api/src/application/: auth_service.rs  document_service.rs  error.rs  machine_service.rs  mod.rs  organization_service.rs  pricing_service.rs  user_service.rs
crates/api/src/application/ports/: document_repo.rs  file_storage.rs  machine_repo.rs  mod.rs  organization_repo.rs  password_hasher.rs  plan_repo.rs  refresh_token_repo.rs  subscription_repo.rs  token_service.rs  user_repo.rs
crates/api/src/domain/: document.rs  error.rs  ids.rs  machine.rs  mod.rs  organization.rs  plan.rs  user.rs  value_objects.rs
crates/api/src/infrastructure/: db.rs  mod.rs
crates/api/src/infrastructure/persistence/: mod.rs  mysql_document_repo.rs  mysql_machine_repo.rs  mysql_organization_repo.rs  mysql_plan_repo.rs  mysql_refresh_token_repo.rs  mysql_subscription_repo.rs  mysql_user_repo.rs
crates/api/src/infrastructure/security/: argon2_hasher.rs  jwt_token_service.rs
crates/api/src/web/: dto.rs  extractors.rs  middleware.rs  mod.rs  pagination.rs  router.rs
crates/api/src/web/handlers/: auth.rs  documents.rs  health.rs  machines.rs  mod.rs  organization.rs  pricing.rs  users.rs
crates/api/tests/: handlers.rs  repositories.rs  services.rs
crates/api/tests/common/: mod.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: auth.rs  config.rs  dto.rs  handlers.rs  lib.rs  main.rs  router.rs  state.rs
crates/resolver/tests/: resolve.rs
migrations/: 0001_init.sql  0002_seed_plans.sql  (+1 more)
(+49 files in other folders)
