[package]
name = "electronix-id-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "electronix_id_api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "macros", "migrate", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
validator = { version = "0.19", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
sha2 = "0.10"
rand = "0.8"
dotenvy = "0.15"

[dev-dependencies]
http-body-util = "0.1"
